# Rainbone

./: .gitignore  3D_test  CMakeLists.txt  Makefile  README.md  helloworld.cpp  run.bat
Docs/Code Style Example/: Class.cpp  Class.h
config/: single_fisheye.xml  two_fisheye_nodes.xml
docs/: gameplay-instructions.md  setup.md
dome-pilot-instructions/: index.html
include/: GameHandler.h  InputAudio.h  OutputAudio.h  SkySphere.h
juce/: CMakeCache.txt  juce.jucer
juce/Builds/MacOSX/: Info.plist
juce/Builds/MacOSX/juce.xcodeproj/: project.pbxproj
juce/Builds/MacOSX/juce.xcodeproj/project.xcworkspace/xcuserdata/marcus.xcuserdatad/: UserInterfaceState.xcuserstate
juce/Builds/MacOSX/juce.xcodeproj/xcuserdata/marcus.xcuserdatad/xcschemes/: juce.xcscheme  xcschememanagement.plist
juce/JuceLibraryCode/: AppConfig.h  JuceHeader.h
juce/JuceLibraryCode/modules/juce_audio_basics/: juce_audio_basics.h
juce/JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.h
juce/JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
juce/JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.h
juce/JuceLibraryCode/modules/juce_audio_utils/: juce_audio_utils.h
juce/JuceLibraryCode/modules/juce_core/: juce_core.h
juce/JuceLibraryCode/modules/juce_cryptography/: juce_cryptography.h
juce/JuceLibraryCode/modules/juce_data_structures/: juce_data_structures.h
juce/JuceLibraryCode/modules/juce_events/: juce_events.h
juce/JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
juce/JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
juce/JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
juce/JuceLibraryCode/modules/juce_opengl/: juce_opengl.h
juce/JuceLibraryCode/modules/juce_video/: juce_video.h
juce/Source/: Main.cpp
lib/portaudio-osx-precompiled-dylib/: libportaudio.dylib
portaudio/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
portaudio/examples/: CMakeCache.txt  Makefile  cmake_install.cmake  helloworld.cpp  mybinaryfile
portaudio/myBinaries/: CMakeCache.txt  Makefile  cmake_install.cmake
portaudio107/: Makefile  config.status  libtool
shaders/: SimpleVertexShader.vertexshader  phongfragmentshader.glsl  phongvertexshader.glsl  texturedphongfragmentshader.glsl  texturedphongvertexshader.glsl  texturefragmentshader.glsl  texturevertexshader.glsl
src/: AudioHandler.cpp  AudioHandler.h  Character.cpp  Character.h  GameHandler.cpp  GameHandler.h  InputAudio.cpp  InputAudio.h  Letter.cpp  Letter.h  Level.cpp  Level.h  OutputAudio.cpp  OutputAudio.h  Scene.cpp  Scene.h  SkySphere.cpp  SkySphere.h  SoundHandler.cpp  SoundHandler.h  Timer.cpp  Timer.h  Utils.h  main.cpp  main_sound.cpp  objloader.cpp  objloader.hpp  voice.cpp
